--- a/index.html
+++ b/index.html
@@ -6,21 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dota 2MMR faker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script defer src="faker.js"></script>
+    <style>
+        #userInput{
+            margin: 20px;
+        }
+        input{
+            width: 110px;
+            margin-right: 10px;
+        }
+        input[type="number"]
+        {
+            font-size:20px;
+        }
+        canvas{
+            max-width: 100%;
+        }
+        #info{
+          display: inline;
+        }
+ 
+    </style>
 </head>
 
 <body>
-    <input type="text" id="solo" class="mmr" disabled>
-    <br><br>
-    <input type="text" id="party" class="mmr" disabled>
-    <br><br>
-    <select>
-        <option value="none">Select Medal</option>
-        <option value="immortal">Immortal</option>
-        <option value="immortal">Immortal</option>
-        <option value="immortal">Immortal</option>
-    </select>
-    <input type="file" id="fileInput" />
+    <div id="userInput">
+        <input type="number" id="solo" class="mmr" placeholder="Solo mmr" maxlength="4" min="1" max="9999" disabled>
+        <div id="info">Upload print screen from your dota 2 status menu. Must be 1920x1080!</div>
+        <br><br>
+        <input type="number" id="party" class="mmr" placeholder="Party mmr" maxlength="4" min="1" max="9999" disabled>
+        <input type="file" id="fileInput" style="display:none;" accept="image/x-png" />
+        <label class="btn btn-primary" for="fileInput">Upload Image</label>
+    </div>
     <canvas id="canvas"></canvas>
 </body>
 
