--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <div id="userInput">
         <input type="number" id="solo" class="mmr" placeholder="Solo mmr" maxlength="4" min="1" max="9999" disabled>
-        <div id="info">Upload print screen from your dota 2 status menu. Must be 1920x1080!</div>
+        <div id="info">Upload print screen from your dota 2 stats menu. Must be 1920x1080!</div>
         <br><br>
         <input type="number" id="party" class="mmr" placeholder="Party mmr" maxlength="4" min="1" max="9999" disabled>
         <input type="file" id="fileInput" style="display:none;" accept="image/x-png" />
